...
      dirtyFields.reportLocationDetails?.indoorDetails?.buildingName ||
      dirtyFields.reportLocationDetails?.indoorDetails?.floorNumber;

    // Only show alert if user has filled out indoor fields
    if (switchingToOutdoor && isIndoorInputsDirty) {
      Alert.alert(
        'Are you sure?',
        'This will clear the Building Name and Floor Number',
        [
          {
            text: 'Cancel',
            onPress: () => {}
          },
          {
            text: 'Yes',
            onPress: () => switchReportLocation(reportLocation, onChange)
          }
        ]
      );
    } else {
      switchReportLocation(reportLocation, onChange);
...
                {errors.reportLocation && (
                  <ThemedText type="error">
                    {errors.reportLocation.message}
                  </ThemedText>
                )}
                <ThemedRadioButton
                  title="Indoor"
                  checked={value === ReportLocationType.INDOOR}
                  onPress={() =>
                    maybeSwitchLocationAlert(
                      ReportLocationType.INDOOR,
                      onChange
                    )
                  }
                />
                <ThemedRadioButton
                  title="Outdoor"
                  checked={value === ReportLocationType.OUTDOOR}
                  onPress={() =>
                    maybeSwitchLocationAlert(
                      ReportLocationType.OUTDOOR,
                      onChange
                    )
...
                rules={VALIDATION_RULES.buildingName}
                render={({ field: { onChange, value } }) => (
                  <ThemedTextInput
                    label="Building Name"
                    onChangeText={onChange}
                    value={value}
                    placeholder="Enter building name"
                    errorText={
                      errors.reportLocationDetails?.indoorDetails?.buildingName
                        ?.message
                    }
                    required
                  />
...
            rules={VALIDATION_RULES.title}
            render={({ field: { onChange, value } }) => (
              <ThemedTextInput
                label="Title"
                onChangeText={onChange}
                value={value}
                placeholder="Enter title"
                errorText={errors.title?.message}
                testID="report-form-title-input"
                required
              />
            )}
          />
...
              {submissionError}
            </ThemedText>
          )}
        </ThemedView>
        <ThemedView style={[styles.submitContainer]}>
          <TextButton
            text="Reset Form"
            type="tertiary"
            smallCaps={false}
            textStyle={styles.clearFormButton}
            onPress={onReset}
          />
          <TextButton
...
