...
          <ImageButton
            source={require('@/assets/images/back-arrow.png')}
            size={24}
            onPress={handleBackButton}
            elevated={true}
            style={styles.backButton}
            testID="close-modal-button"
          />
          <ThemedView
            style={styles.pinAbsoluteContainer}
            transparent={true}
            pointerEvents="none"
          >
...
                animationMode="moveTo"
              />
            </MapView>
            <ThemedView style={styles.bottomSheetContainer}>
              <TextButton
                type="tertiary"
                text="Use Current Location"
                textStyle={styles.setCurrentLocationText}
                smallCaps={false}
                onPress={() => centerMapOnCurrentLocation()}
              >
                <Image
                  source={require('@/assets/images/location-icon.png')}
                  style={styles.locationIcon}
                />
              </TextButton>
              <TextButton
                type="primary"
                text="Set Location"
                onPress={updateSelectedLocation}
                testID="set-location-button"
              />
            </ThemedView>
          </ThemedView>
        </ThemedView>
...
