...
  return (
    <MapboxMapView
      style={[style]}
      styleURL={styleURL}
      logoEnabled={false}
      ref={ref}
      testID="mapbox-mapview"
    >
      {children}
    </MapboxMapView>
  );
}

...
