...
      .catch((error) => {
        setUploadErrorText(error.message);
      });
  };

  const showOptionsMenu = () => {
    const options = ['Use Camera', 'Upload from Library', 'Cancel'];
    const cameraIndex = 0;
    const libraryIndex = 1;
    const cancelButtonIndex = 2;

    showActionSheetWithOptions(
      {
...
